...

                <TextView
                    android:id="@+id/history_month_text"
                    style="@style/ExText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Tháng 09/2026"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
